<resources>
    <string name="app_name">FLRS</string>
    <string name="title_home">ホーム</string>
    <string name="title_notifications">設定</string>
    <string name="title_activity_page_configuration">MainActivity</string>
    <string name="title_page_register_select">食品追加</string>
    <string name="text_register_date">登録日：</string>
    <string name="text_limit_date">期限日：</string>
    <string name="text_edit_food_name">食品名</string>
    <string name="button_delete">削除</string>
    <string name="button_register">保存</string>
    <string name="title_page_camera">カメラで追加</string>
    <string name="title_page_insert">食品を追加</string>

</resources>