<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.flrs.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.flrs.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_page_register_select"
        android:name="com.example.flrs.ui.page_register_select.PageRegisterSelectFragment"
        android:label="@string/title_page_register_select"
        tools:layout="@layout/fragment_page_register_select" >
        <action
            android:id="@+id/action_navigation_page_register_select_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_page_register_select_to_page_insert_fragment2"
            app:destination="@id/page_insert_fragment" />
        <action
            android:id="@+id/action_navigation_page_register_select_to_page_camera_fragment2"
            app:destination="@id/page_camera_fragment" />
    </fragment>
    <fragment
        android:id="@+id/page_insert_fragment"
        android:name="com.example.flrs.ui.page_insert.PageInsertFragment"
        android:label="@string/title_page_insert"
        tools:layout="@layout/fragment_page_insert" />
    <fragment
        android:id="@+id/page_camera_fragment"
        android:name="com.example.flrs.ui.page_camera.PageCameraFragment"
        android:label="@string/title_page_camera"
        tools:layout="@layout/fragment_page_camera" >
        <action
            android:id="@+id/action_page_camera_fragment_to_navigation_page_register_select"
            app:destination="@id/navigation_page_register_select" />
    </fragment>
</navigation>